--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
@@ -97,9 +97,10 @@
         });
         settings.Columns.Add("pr_codigo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
-        settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
-        settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(30);
-        settings.Columns.Add("IdEstadoAprobacion_cat", "Estado Aprobación").Width = Unit.Percentage(20);
+        settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(25);
+        settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(20);
+        settings.Columns.Add("Total", "Total").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdEstadoAprobacion_cat", "Estado Aprobación").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
