--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ContabilidadReportes/CONTA_002.cshtml
@@ -2,6 +2,7 @@
 @model Core.Erp.Info.Helps.cl_filtros_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "CONTA_002";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
@@ -101,7 +102,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="IdPunto_cargo">Punto de cargo</label>
-                        @Html.Partial("_CmbPuntoCargo_Reportes", Model.IdPunto_cargo)
+                        @Html.Partial("_CmbPuntoCargo_Reportes", Model)
                         @Html.ValidationMessageFor(q => q.IdPunto_cargo, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -275,17 +276,18 @@
 
                 </div>
                 <div class="box-body">
-                    @Html.DevExpress().WebDocumentViewer(settings =>
-   {
-       settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
-       settings.MobileMode = false;
-       settings.Name = "webDocumentViewer";
-   }).Bind(ViewBag.Report).GetHtml()
-                </div>
+                     @Html.DevExpress().WebDocumentViewer(settings =>
+    {
+        settings.ClientSideEvents.Init = "function(s, e) {s.previewModel.reportPreview.zoom(1);}";
+        settings.MobileMode = false;
+        settings.Name = "webDocumentViewer";
+    }).Bind(ViewBag.Report).GetHtml()
+                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer">
                     [@Session["IdEmpresa"]] @Session["nom_empresa"]
                 </div>
+
                 <!-- /.box-footer-->
             </div>
             }
