--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/_GridViewPartial_clientetipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/_GridViewPartial_clientetipo.cshtml
@@ -50,7 +50,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToString(e.GetValue("estado")) == "I")
+            if (Convert.ToString(e.GetValue("Estado")) == "I")
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -60,7 +60,7 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "estado")) == "A")
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
                 Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), Idtipo_cliente = DataBinder.Eval(tc.DataItem, "Idtipo_cliente") }) + "&nbsp;" +
