--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal.cshtml
@@ -95,7 +95,7 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("pr_codigo", "Código").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdOrdenCompra", "#Orden").Width = Unit.Percentage(10);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(25);
         settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(20);
